Create ignition tuning plugin (#166)
* Create initial Light Tuning Plugin

Makes use of create and remove services to toggle the rendering of a
single light.

* Use GUI parameters to instantly modify and update light

Adds functions to parse all light fields and update the light instantly.
Includes various functions to parse GUI inputs and generate a new light
to replace existing one.

* Refactor plugin to make use of model-view structure

Use QAbstractListModel and delegate in QML. Add support for saving
lights and updating or adding multiple lights. Enfore name uniquness.

* Add spot light capabilities

Parse and update spot light params includng inner and outer angles.
Also adds comments and search for world name.

* Add markers to set light pose easily and add sliders for param selection

Usability improvements to make editing lights easier.

* Add color picker for diffuse and specular color selection

* Modify light save function to omit intermediate sdf tags

* Check for preexisting light names before creation and hide spotlight params

Also removes check for REMOVE in queue before adding new action

* Enable automatic updates of light on parameter changes

Adds callbacks for all GUI components, and keeps track of
old marker pose to reduce number of updates sent to light. QML
signals dleiberately chosen to ensure no create/remove requests are
sent too soon after one another.

--- a/rmf_demo_plugins/rmf_ignition_plugins/CMakeLists.txt
+++ b/rmf_demo_plugins/rmf_ignition_plugins/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 project(rmf_ignition_plugins)
 
+set (CMAKE_AUTOMOC ON)
+
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
   set(CMAKE_C_STANDARD 99)
@@ -39,6 +41,8 @@ ign_find_package(ignition-common3 REQUIRED)
 set(IGN_COMMON_VER 3)
 ign_find_package(ignition-math6 REQUIRED)
 set(IGN_MATH_VER 6)
+ign_find_package(ignition-gui4 REQUIRED)
+set(IGN_GUI_VER 4)
 ign_find_package(ignition-msgs6 REQUIRED)
 set(IGN_MSGS_VER 6)
 ign_find_package(ignition-transport9 REQUIRED)
@@ -52,6 +56,13 @@ find_package(rmf_dispenser_msgs REQUIRED)
 find_package(rmf_ingestor_msgs REQUIRED)
 find_package(building_map_msgs REQUIRED)
 find_package(rmf_plugins_common REQUIRED)
+find_package (Qt5
+  COMPONENTS
+    Core
+    Qml
+    Quick
+  REQUIRED
+)
 
 include(GNUInstallDirs)
 
@@ -129,6 +140,35 @@ target_include_directories(readonly
 )
 
 ###############################
+# LightTuning
+###############################
+
+QT5_ADD_RESOURCES(resources_RCC src/LightTuning/LightTuning.qrc)
+
+add_library(LightTuning SHARED ${headers_MOC}
+  src/LightTuning/LightTuning.cpp
+  ${resources_RCC}
+)
+
+ament_target_dependencies(LightTuning
+  ignition-gui${IGN_GUI_VER}
+  ignition-gazebo${IGN_GAZEBO_VER}
+  ignition-msgs${IGN_MSGS_VER}
+  ignition-transport${IGN_TRANSPORT_VER}
+  Qt5Core
+  Qt5Qml
+  Qt5Quick
+  rclcpp
+)
+
+target_include_directories(LightTuning
+  PUBLIC
+  ${Qt5Core_INCLUDE_DIRS}
+  ${Qt5Qml_INCLUDE_DIRS}
+  ${Qt5Quick_INCLUDE_DIRS}
+)
+
+###############################
 # Install Targets
 ###############################
 
@@ -137,6 +177,7 @@ install(
     teleport_dispenser
     teleport_ingestor
     readonly
+    LightTuning
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
