--- a/rmf_robot_sim_common/CMakeLists.txt
+++ b/rmf_robot_sim_common/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(rmf_plugins_common)
+project(rmf_robot_sim_common)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
