--- a/rmf_robot_sim_gazebo_plugins/package.xml
+++ b/rmf_robot_sim_gazebo_plugins/package.xml
@@ -23,7 +23,7 @@
   <depend>rmf_dispenser_msgs</depend>
   <depend>rmf_ingestor_msgs</depend>
   <depend>building_map_msgs</depend>
-  <depend>rmf_plugins_common</depend>
+  <depend>rmf_robot_sim_common</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
