--- a/rmf_robot_sim_common/package.xml
+++ b/rmf_robot_sim_common/package.xml
@@ -1,11 +1,9 @@
 <package format="3">
-  <name>rmf_ignition_plugins</name>
+  <name>rmf_robot_sim_common</name>
   <version>1.2.0</version>
   <description>
-    ROS 2 Ignition plugins for TeleportIngestors and TeleportDispensers
+    Common utility functions for Gazebo and ignition RMF plugins
   </description>
-  <author>Luca Della Vedova</author>
-  <author>Yadu</author>
   <author>Aaron Chong</author>
   <author>Rushyendra Maganty</author>
   <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
@@ -17,12 +15,10 @@
   <depend>eigen</depend>
 
   <depend>std_msgs</depend>
-
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_dispenser_msgs</depend>
   <depend>rmf_ingestor_msgs</depend>
   <depend>building_map_msgs</depend>
-  <depend>rmf_plugins_common</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
