--- a/rmf_robot_sim_gazebo_plugins/package.xml
+++ b/rmf_robot_sim_gazebo_plugins/package.xml
@@ -1,9 +1,11 @@
 <package format="3">
-  <name>rmf_plugins_common</name>
+  <name>rmf_robot_sim_gazebo_plugins</name>
   <version>1.2.0</version>
   <description>
-    Common utility functions for Gazebo and ignition RMF plugins
+    ROS 2 Gazebo plugins for TeleportIngestors, TeleportDispensers and Readonly Objects
   </description>
+  <author>Luca Della Vedova</author>
+  <author>Yadu</author>
   <author>Aaron Chong</author>
   <author>Rushyendra Maganty</author>
   <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
@@ -13,12 +15,15 @@
 
   <depend>rclcpp</depend>
   <depend>eigen</depend>
+  <depend>gazebo_ros_pkgs</depend>
 
   <depend>std_msgs</depend>
+  
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_dispenser_msgs</depend>
   <depend>rmf_ingestor_msgs</depend>
   <depend>building_map_msgs</depend>
+  <depend>rmf_robot_sim_common</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
