--- a/rmf_robot_sim_ignition_plugins/package.xml
+++ b/rmf_robot_sim_ignition_plugins/package.xml
@@ -1,8 +1,8 @@
 <package format="3">
-  <name>rmf_gazebo_plugins</name>
+  <name>rmf_robot_sim_ignition_plugins</name>
   <version>1.2.0</version>
   <description>
-    ROS 2 Gazebo plugins for TeleportIngestors, TeleportDispensers and Readonly Objects
+    ROS 2 Ignition plugins for TeleportIngestors and TeleportDispensers
   </description>
   <author>Luca Della Vedova</author>
   <author>Yadu</author>
@@ -15,15 +15,14 @@
 
   <depend>rclcpp</depend>
   <depend>eigen</depend>
-  <depend>gazebo_ros_pkgs</depend>
 
   <depend>std_msgs</depend>
-  
+
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_dispenser_msgs</depend>
   <depend>rmf_ingestor_msgs</depend>
   <depend>building_map_msgs</depend>
-  <depend>rmf_plugins_common</depend>
+  <depend>rmf_robot_sim_common</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
