--- a/rmf_building_sim_common/package.xml
+++ b/rmf_building_sim_common/package.xml
@@ -22,7 +22,7 @@
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_door_msgs</depend>
   <depend>rmf_lift_msgs</depend>
-  <depend>building_map_msgs</depend>
+  <depend>rmf_building_map_msgs</depend>
   <depend>tf2_ros</depend>
   <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>
