--- a/rmf_building_sim_gazebo_plugins/CMakeLists.txt
+++ b/rmf_building_sim_gazebo_plugins/CMakeLists.txt
@@ -34,7 +34,7 @@ find_package(std_srvs REQUIRED)
 find_package(rmf_fleet_msgs REQUIRED)
 find_package(rmf_door_msgs REQUIRED)
 find_package(rmf_lift_msgs REQUIRED)
-find_package(building_map_msgs REQUIRED)
+find_package(rmf_building_map_msgs REQUIRED)
 find_package(rmf_building_sim_common REQUIRED)
 find_package(menge QUIET)
 
@@ -54,7 +54,7 @@ ament_target_dependencies(slotcar
   std_msgs
   geometry_msgs
   tf2_ros
-  building_map_msgs
+  rmf_building_map_msgs
 )
 
 target_include_directories(slotcar
