--- a/rmf_robot_sim_common/package.xml
+++ b/rmf_robot_sim_common/package.xml
@@ -18,7 +18,7 @@
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_dispenser_msgs</depend>
   <depend>rmf_ingestor_msgs</depend>
-  <depend>building_map_msgs</depend>
+  <depend>rmf_building_map_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
