--- a/rmf_building_sim_gazebo_plugins/CMakeLists.txt
+++ b/rmf_building_sim_gazebo_plugins/CMakeLists.txt
@@ -27,8 +27,6 @@ find_package(gazebo_ros REQUIRED)
 find_package(gazebo_dev REQUIRED)
 find_package(OpenCV REQUIRED )
 find_package(gazebo_msgs REQUIRED)
-find_package(tf2_ros REQUIRED)
-find_package(geometry_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
 find_package(rmf_fleet_msgs REQUIRED)
@@ -39,31 +37,9 @@ find_package(rmf_building_sim_common REQUIRED)
 find_package(menge QUIET)
 
 # TODO this is a dependency of rmf_building_sim_common, it shouldn't be needed
-find_package(Eigen3 REQUIRED)
+#find_package(Eigen3 REQUIRED)
 
 include(GNUInstallDirs)
-
-add_library(slotcar SHARED ${PROJECT_SOURCE_DIR}/src/slotcar.cpp)
-
-ament_target_dependencies(slotcar
-  Eigen3
-  rmf_building_sim_common
-  rmf_fleet_msgs
-  rclcpp
-  gazebo_ros
-  std_msgs
-  geometry_msgs
-  tf2_ros
-  rmf_building_map_msgs
-)
-
-target_include_directories(slotcar
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-    ${EIGEN3_INCLUDE_DIRS}
-    ${GAZEBO_INCLUDE_DIRS}
-)
 
 ###############################
 # door stuff
@@ -203,7 +179,7 @@ endif()
 ###############################
 
 install(
-  TARGETS slotcar door lift toggle_floors toggle_charging thumbnail_generator
+  TARGETS door lift toggle_floors toggle_charging thumbnail_generator
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
