--- a/rmf_building_sim_ignition_plugins/CMakeLists.txt
+++ b/rmf_building_sim_ignition_plugins/CMakeLists.txt
@@ -48,8 +48,6 @@ ign_find_package(ignition-transport9 REQUIRED)
 set(IGN_TRANSPORT_VER 9)
 ign_find_package(sdformat10 REQUIRED)
 
-find_package(tf2_ros REQUIRED)
-find_package(geometry_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
 find_package(rmf_fleet_msgs REQUIRED)
@@ -67,31 +65,6 @@ find_package (Qt5
 find_package(menge QUIET)
 
 include(GNUInstallDirs)
-
-add_library(slotcar SHARED ${PROJECT_SOURCE_DIR}/src/slotcar.cpp)
-
-ament_target_dependencies(slotcar
-  PUBLIC
-    ignition-gazebo${IGN_GAZEBO_VER}
-    ignition-plugin${IGN_PLUGIN_VER}
-    rmf_building_sim_common
-    rmf_fleet_msgs
-    rclcpp
-    geometry_msgs
-    tf2_ros
-)
-
-target_include_directories(slotcar
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-    ${rmf_building_sim_common_INCLUDE_DIRS}
-    ${geometry_msgs_INCLUDE_DIRS}
-    ${std_msgs_INCLUDE_DIRS}
-    ${rmf_fleet_msgs_INCLUDE_DIRS}
-    ${rmf_building_map_msgs_INCLUDE_DIRS}
-    ${tf2_ros_INCLUDE_DIRS}
-)
 
 ###############################
 # door stuff
@@ -210,7 +183,7 @@ target_include_directories(toggle_charging
 ###############################
 
 install(
-  TARGETS slotcar door lift toggle_charging
+  TARGETS door lift toggle_charging
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
