--- a/rmf_robot_sim_gazebo_plugins/package.xml
+++ b/rmf_robot_sim_gazebo_plugins/package.xml
@@ -17,8 +17,9 @@
   <depend>eigen</depend>
   <depend>gazebo_ros_pkgs</depend>
 
+  <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>
-  
+  <depend>tf2_ros</depend>
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_dispenser_msgs</depend>
   <depend>rmf_ingestor_msgs</depend>
