--- a/rmf_robot_sim_common/CMakeLists.txt
+++ b/rmf_robot_sim_common/CMakeLists.txt
@@ -19,7 +19,9 @@ endif()
 find_package(Eigen3 REQUIRED)
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
 find_package(rmf_fleet_msgs REQUIRED)
 find_package(rmf_dispenser_msgs REQUIRED)
 find_package(rmf_ingestor_msgs REQUIRED)
@@ -31,14 +33,14 @@ include(GNUInstallDirs)
 # Utils                       #
 ###############################
 
-add_library(rmf_sim_utils SHARED ${PROJECT_SOURCE_DIR}/src/utils.cpp)
+add_library(rmf_robot_sim_utils SHARED ${PROJECT_SOURCE_DIR}/src/utils.cpp)
 
-ament_target_dependencies(rmf_sim_utils
+ament_target_dependencies(rmf_robot_sim_utils
   rclcpp
   Eigen3
 )
 
-target_include_directories(rmf_sim_utils
+target_include_directories(rmf_robot_sim_utils
   PUBLIC
     ${EIGEN3_INCLUDE_DIRS}
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -110,6 +112,34 @@ target_include_directories(readonly_common
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
+###################################
+# Slotcar Plugin Common           #
+###################################
+
+add_library(slotcar_common SHARED ${PROJECT_SOURCE_DIR}/src/slotcar_common.cpp)
+
+ament_target_dependencies(slotcar_common
+    Eigen3
+    rmf_fleet_msgs
+    rmf_building_map_msgs
+    rclcpp
+    std_msgs
+    geometry_msgs
+    tf2_ros
+)
+
+target_include_directories(slotcar_common
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+    ${EIGEN3_INCLUDE_DIRS}
+    ${GAZEBO_INCLUDE_DIRS}
+)
+
+target_link_libraries(slotcar_common
+    rmf_robot_sim_utils
+)
+
 ###############################
 # Install Targets             #
 ###############################
@@ -118,7 +148,8 @@ ament_export_include_directories(include)
 ament_export_targets(ingestor_common HAS_LIBRARY_TARGET)
 ament_export_targets(dispenser_common HAS_LIBRARY_TARGET)
 ament_export_targets(readonly_common HAS_LIBRARY_TARGET)
-ament_export_targets(rmf_sim_utils HAS_LIBRARY_TARGET)
+ament_export_targets(rmf_robot_sim_utils HAS_LIBRARY_TARGET)
+ament_export_targets(slotcar_common HAS_LIBRARY_TARGET)
 
 install(
   TARGETS ingestor_common
@@ -142,8 +173,15 @@ install(
 )
 
 install(
-  TARGETS rmf_sim_utils
-  EXPORT rmf_sim_utils
+  TARGETS rmf_robot_sim_utils
+  EXPORT rmf_robot_sim_utils
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+)
+
+install(
+  TARGETS slotcar_common
+  EXPORT slotcar_common
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
 )
