--- a/rmf_building_sim_ignition_plugins/CMakeLists.txt
+++ b/rmf_building_sim_ignition_plugins/CMakeLists.txt
@@ -8,7 +8,7 @@ if(NOT CMAKE_C_STANDARD)
   set(CMAKE_C_STANDARD 99)
 endif()
 
-# Default to C++14
+# Default to C++17
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 17)
 endif()
@@ -26,27 +26,27 @@ if (NOT ignition-cmake2_FOUND)
   message("ignition-cmake not found, skipping ignition gazebo plugins")
   return()
 endif()
-ign_find_package(ignition-gazebo4 QUIET)
-if (NOT ignition-gazebo4_FOUND)
-  message("Wrong ignition-gazebo version found. Plugins require ignition-gazebo4 (dome)")
+ign_find_package(ignition-gazebo5 QUIET)
+if (NOT ignition-gazebo5_FOUND)
+  message("Wrong ignition-gazebo version found. Plugins require ignition-gazebo5 (edifice)")
   # To generate a setup.bash and avoid CMake warnings
   ament_package()
   return()
 endif()
-set(IGN_GAZEBO_VER 4)
+set(IGN_GAZEBO_VER 5)
 ign_find_package(ignition-plugin1 REQUIRED COMPONENTS register)
 set(IGN_PLUGIN_VER 1)
-ign_find_package(ignition-common3 REQUIRED)
-set(IGN_COMMON_VER 3)
+ign_find_package(ignition-common4 REQUIRED)
+set(IGN_COMMON_VER 4)
 ign_find_package(ignition-math6 REQUIRED)
 set(IGN_MATH_VER 6)
-ign_find_package(ignition-gui4 REQUIRED)
-set(IGN_GUI_VER 4)
-ign_find_package(ignition-msgs6 REQUIRED)
-set(IGN_MSGS_VER 6)
-ign_find_package(ignition-transport9 REQUIRED)
-set(IGN_TRANSPORT_VER 9)
-ign_find_package(sdformat10 REQUIRED)
+ign_find_package(ignition-gui5 REQUIRED)
+set(IGN_GUI_VER 5)
+ign_find_package(ignition-msgs7 REQUIRED)
+set(IGN_MSGS_VER 7)
+ign_find_package(ignition-transport10 REQUIRED)
+set(IGN_TRANSPORT_VER 10)
+ign_find_package(sdformat11 REQUIRED)
 
 find_package(std_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
