--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,12 +15,7 @@ jobs:
           target-ros2-distro: foxy
           # build all packages listed in the meta package
           package-name: |
-            rmf_building_sim_common |
-            rmf_building_sim_gazebo_plugins |
-            rmf_building_sim_ignition_plugins |
-            rmf_robot_sim_common |
-            rmf_robot_sim_gazebo_plugins |
-            rmf_robot_sim_ignition_plugins
+            rmf_building_sim_common rmf_building_sim_gazebo_plugins rmf_building_sim_ignition_plugins rmf_robot_sim_common rmf_robot_sim_gazebo_plugins rmf_robot_sim_ignition_plugins
           vcs-repo-file-url: |
             https://raw.githubusercontent.com/open-rmf/rmf/main/rmf.repos
           colcon-defaults: |
