--- a/.github/workflows/tsan.yaml
+++ b/.github/workflows/tsan.yaml
@@ -1,8 +1,8 @@
-name: build_and_test
+name: tsan
 on: [push, pull_request]
 jobs:
   build_and_test:
-    name: build_and_test
+    name: tsan
     runs-on: ubuntu-20.04
     steps:
       - name: deps
@@ -26,14 +26,9 @@ jobs:
           colcon-defaults: |
             {
               "build": {
-                "mixin": ["coverage-gcc"]
+                "mixin": ["tsan"],
+                "cmake-args": ["-DCMAKE_BUILD_TYPE=Debug"]
               }
             }
           colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          files: ros_ws/lcov/total_coverage.info
-          flags: tests
-          name: lean_and_mean_codecov_bot
 
