--- a/.github/workflows/tsan.yaml
+++ b/.github/workflows/tsan.yaml
@@ -1,7 +1,7 @@
 name: tsan
 on: [push, pull_request]
 jobs:
-  build_and_test:
+  tsan:
     name: tsan
     runs-on: ubuntu-20.04
     steps:
@@ -11,6 +11,9 @@ jobs:
           required-ros-distributions: foxy
       - name: build_and_test
         uses: ros-tooling/action-ros-ci@v0.2
+        env:
+          CC: clang
+          CXX: clang++
         with:
           target-ros2-distro: foxy
           # build all packages listed in the meta package
