Adding upload_artifact step in tsan workflow
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/tsan.yaml
+++ b/.github/workflows/tsan.yaml
@@ -34,4 +34,10 @@ jobs:
               }
             }
           colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
+      - name: upload_test_stream
+        uses: actions/upload-artifact@v2
+        with:
+          name: colcon-test-logs
+          path: ${{ steps.tsan_build_test.outputs.ros-workspace-directory-name }}/log/latest_test/rmf_traffic/streams.log
+        if: always()
 
