Added cron job for both build and tsan, fixed upload artifact targets
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,10 @@
-name: build_and_test
-on: [push, pull_request]
+name: build 
+on: 
+  push:
+  pull_request:
+  schedule:
+    - cron: '0 0 * * *'
+
 jobs:
   build_and_test:
     name: build_and_test
