--- a/.github/workflows/tsan.yaml
+++ b/.github/workflows/tsan.yaml
@@ -1,5 +1,9 @@
 name: tsan
-on: pull_request
+on:
+  pull_request:
+  schedule:
+    - cron: '0 0 * * *'
+
 jobs:
   tsan:
     name: tsan
@@ -9,8 +13,9 @@ jobs:
         uses: ros-tooling/setup-ros@v0.1
         with:
           required-ros-distributions: foxy
-      - name: build_and_test
+      - name: tsan_build_test
         uses: ros-tooling/action-ros-ci@v0.2
+        id: tsan_build_test
         env:
           CC: clang
           CXX: clang++
@@ -38,6 +43,12 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: colcon-test-logs
-          path: ${{ steps.tsan_build_test.outputs.ros-workspace-directory-name }}/log/latest_test/rmf_traffic/streams.log
+          path: |
+            ${{ steps.tsan_build_test.outputs.ros-workspace-directory-name }}/log/latest_test/rmf_building_sim_common/streams.log
+            ${{ steps.tsan_build_test.outputs.ros-workspace-directory-name }}/log/latest_test/rmf_building_sim_gazebo_plugins/streams.log
+            ${{ steps.tsan_build_test.outputs.ros-workspace-directory-name }}/log/latest_test/rmf_building_sim_ignition_plugins/streams.log
+            ${{ steps.tsan_build_test.outputs.ros-workspace-directory-name }}/log/latest_test/rmf_robot_sim_common/streams.log
+            ${{ steps.tsan_build_test.outputs.ros-workspace-directory-name }}/log/latest_test/rmf_robot_sim_gazebo_plugins/streams.log
+            ${{ steps.tsan_build_test.outputs.ros-workspace-directory-name }}/log/latest_test/rmf_robot_sim_ignition_plugins/streams.log
         if: always()
 
