--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,46 +1,44 @@
-name: build
-on: [push, pull_request]
-jobs:
+name: build 
+on: 
+  push:
+  pull_request:
+  schedule:
+    - cron: '0 0 * * *'
 
-  ros2:
+jobs:
+  build_and_test:
+    name: build_and_test
     runs-on: ubuntu-20.04
-    container:
-      image: docker://ros:foxy-ros-base-focal
     steps:
-    - name: non-ros-deps
-      run: |
-        sudo apt update
-        sudo apt install -y wget
-        sudo sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list'
-        wget https://packages.osrfoundation.org/gazebo.key -O - | apt-key add -
-        
-        sudo apt update && sudo apt install \
-          git cmake python3-vcstool curl \
-          qt5-default \
-          python3-shapely python3-yaml python3-requests \
-          ignition-edifice \
-          -y
-    - name: create-ws
-      run: |
-        mkdir -p rmf_ws/src
-    - name: checkout # This will check out the current branch for build tests
-      uses: actions/checkout@v2
-      with:
-        path: rmf_ws/src/rmf_simulation/
-    - name: workspace
-      run: |
-        cd rmf_ws/src
-        git clone https://github.com/open-rmf/menge_vendor
-        git clone https://github.com/open-rmf/rmf_internal_msgs
-        git clone https://github.com/open-rmf/rmf_building_map_msgs
-    - name: ros-deps
-      run: |
-        cd rmf_ws
-        rosdep update
-        rosdep install --from-paths src --ignore-src --rosdistro foxy -yr
-    - name: build
-      shell: bash
-      run: |
-        cd rmf_ws
-        source /opt/ros/foxy/setup.bash
-        colcon build --cmake-args -DCMAKE_BUILD_TYPE=Release
+      - name: deps
+        uses: ros-tooling/setup-ros@v0.1
+        with:
+          required-ros-distributions: foxy
+      - name: build_and_test
+        uses: ros-tooling/action-ros-ci@v0.2
+        with:
+          target-ros2-distro: foxy
+          # build all packages listed in the meta package
+          package-name: |
+            rmf_building_sim_common
+            rmf_building_sim_gazebo_plugins
+            rmf_building_sim_ignition_plugins
+            rmf_robot_sim_common
+            rmf_robot_sim_gazebo_plugins
+            rmf_robot_sim_ignition_plugins
+          vcs-repo-file-url: |
+            https://raw.githubusercontent.com/open-rmf/rmf/main/rmf.repos
+          colcon-defaults: |
+            {
+              "build": {
+                "mixin": ["coverage-gcc"]
+              }
+            }
+          colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          files: ros_ws/lcov/total_coverage.info
+          flags: tests
+          name: lean_and_mean_codecov_bot
+
