--- a/rmf_building_sim_common/package.xml
+++ b/rmf_building_sim_common/package.xml
@@ -21,6 +21,8 @@
   <depend>rmf_lift_msgs</depend>
   <depend>rmf_building_map_msgs</depend>
   <depend>menge_vendor</depend>
+  <depend>libqt5-widgets</depend>
+  <depend>qtbase5-dev</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
