--- a/.github/workflows/asan.yaml
+++ b/.github/workflows/asan.yaml
@@ -31,7 +31,7 @@ jobs:
           colcon-defaults: |
             {
               "build": {
-                "mixin": ["asan"],
+                "mixin": ["asan-gcc"],
                 "cmake-args": ["-DCMAKE_BUILD_TYPE=Debug"]
               }
             }
