fix typo on gazebo_dev dependency
Signed-off-by: Marco A. Gutierrez <marco@openrobotics.org>

--- a/rmf_robot_sim_gazebo_plugins/package.xml
+++ b/rmf_robot_sim_gazebo_plugins/package.xml
@@ -15,7 +15,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
-  <depend>gazebo-dev</depend>
+  <depend>gazebo_dev</depend>
   <depend>gazebo_ros</depend>
   <depend>eigen</depend>
   <depend>geometry_msgs</depend>
