--- a/rmf_robot_sim_ignition_plugins/CMakeLists.txt
+++ b/rmf_robot_sim_ignition_plugins/CMakeLists.txt
@@ -22,18 +22,9 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 
-find_package(ignition-cmake2 QUIET)
-if (NOT ignition-cmake2_FOUND)
-  message("ignition-cmake not found, skipping ignition gazebo plugins")
-  return()
-endif()
-ign_find_package(ignition-gazebo5 QUIET)
-if (NOT ignition-gazebo5_FOUND)
-  message("Wrong ignition-gazebo version found. Plugins require ignition-gazebo5 (edifice)")
-  # To generate a setup.bash and avoid CMake warnings
-  ament_package()
-  return()
-endif()
+find_package(ignition-cmake2 REQUIRED)
+
+ign_find_package(ignition-gazebo5 REQUIRED)
 set(IGN_GAZEBO_VER 5)
 ign_find_package(ignition-plugin1 REQUIRED COMPONENTS register)
 set(IGN_PLUGIN_VER 1)
