making install location package specific
Signed-off-by: Marco A. Gutierrez <marco@openrobotics.org>

--- a/rmf_building_sim_gazebo_plugins/CMakeLists.txt
+++ b/rmf_building_sim_gazebo_plugins/CMakeLists.txt
@@ -154,8 +154,8 @@ target_include_directories(crowd_simulator
 
 install(
   TARGETS door lift toggle_floors toggle_charging thumbnail_generator crowd_simulator
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION lib/${PROJECT_NAME}
+  ARCHIVE DESTINATION lib/${PROJECT_NAME}
 )
 
 ament_package()
