--- a/rmf_building_sim_ignition_plugins/CMakeLists.txt
+++ b/rmf_building_sim_ignition_plugins/CMakeLists.txt
@@ -151,8 +151,8 @@ target_include_directories(toggle_charging
 
 install(
   TARGETS door lift crowd_simulator toggle_charging
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION lib/${PROJECT_NAME}
+  ARCHIVE DESTINATION lib/${PROJECT_NAME}
 )
 
 ament_package()
