--- a/rmf_robot_sim_ignition_plugins/CMakeLists.txt
+++ b/rmf_robot_sim_ignition_plugins/CMakeLists.txt
@@ -192,8 +192,8 @@ install(
     readonly
     slotcar
     LightTuning
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION lib/${PROJECT_NAME}
+  ARCHIVE DESTINATION lib/${PROJECT_NAME}
 )
 
 ament_package()
