--- a/rmf_robot_sim_gazebo_plugins/CMakeLists.txt
+++ b/rmf_robot_sim_gazebo_plugins/CMakeLists.txt
@@ -130,8 +130,8 @@ install(
     teleport_ingestor
     readonly
     slotcar
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION lib/${PROJECT_NAME}
+  ARCHIVE DESTINATION lib/${PROJECT_NAME}
 )
 
 ament_package()
