Update workflows to test in build action
Signed-off-by: Luca Della Vedova <luca@openrobotics.org>

--- a/.github/workflows/tsan.yaml
+++ b/.github/workflows/tsan.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: deps
         uses: ros-tooling/setup-ros@v0.2
         with:
-          required-ros-distributions: foxy
+          required-ros-distributions: galactic
       - name: tsan_build_test
         uses: ros-tooling/action-ros-ci@v0.2
         id: tsan_build_test
@@ -20,7 +20,7 @@ jobs:
           CC: clang
           CXX: clang++
         with:
-          target-ros2-distro: foxy
+          target-ros2-distro: galactic
           # build all packages listed in the meta package
           package-name: |
             rmf_building_sim_common
