--- a/.github/workflows/asan.yaml
+++ b/.github/workflows/asan.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           required-ros-distributions: galactic
       - name: install_clang
-        run: sudo apt update && sudo apt install -y clang clang-tools
+        run: sudo apt update && sudo apt install -y clang clang-tools lld lldb
       - name: build_and_test
         uses: ros-tooling/action-ros-ci@v0.2
         env:
