--- a/.github/workflows/asan.yaml
+++ b/.github/workflows/asan.yaml
@@ -8,14 +8,14 @@ on:
 jobs:
   asan:
     name: asan
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     container:
-      image: rostooling/setup-ros-docker:ubuntu-focal-latest
+      image: rostooling/setup-ros-docker:ubuntu-jammy-latest
     steps:
       - name: deps
         uses: ros-tooling/setup-ros@v0.3
         with:
-          required-ros-distributions: galactic
+          required-ros-distributions: humble
       - name: install_clang
         run: sudo apt update && sudo apt install -y clang clang-tools lld
       - name: build_and_test
@@ -24,7 +24,7 @@ jobs:
           CC: clang
           CXX: clang++
         with:
-          target-ros2-distro: galactic
+          target-ros2-distro: humble
           # build all packages listed in the meta package
           package-name: |
             rmf_building_sim_common
@@ -34,7 +34,7 @@ jobs:
             rmf_robot_sim_gazebo_plugins
             rmf_robot_sim_ignition_plugins
           vcs-repo-file-url: |
-            https://raw.githubusercontent.com/open-rmf/rmf/main/rmf.repos
+            https://raw.githubusercontent.com/open-rmf/rmf/humble-image/rmf.repos
           colcon-defaults: |
             {
               "build": {
