Use jammy container
Signed-off-by: Yadunund <yadunund@gmail.com>

--- a/.github/workflows/tsan.yaml
+++ b/.github/workflows/tsan.yaml
@@ -9,7 +9,7 @@ jobs:
     name: tsan
     runs-on: ubuntu-latest
     container:
-      image: rostooling/setup-ros-docker:ubuntu-focal-latest
+      image: rostooling/setup-ros-docker:ubuntu-jammy-latest
     steps:
       - name: deps
         uses: ros-tooling/setup-ros@v0.3
