Fixed symbol error for dispenser_common
Signed-off-by: Yadunund <yadunund@gmail.com>

--- a/rmf_robot_sim_common/CMakeLists.txt
+++ b/rmf_robot_sim_common/CMakeLists.txt
@@ -35,13 +35,14 @@ include(GNUInstallDirs)
 
 add_library(rmf_robot_sim_utils SHARED ${PROJECT_SOURCE_DIR}/src/utils.cpp)
 
-ament_target_dependencies(rmf_robot_sim_utils
-  rclcpp
-  Eigen3
+target_link_libraries(rmf_robot_sim_utils
+  rclcpp::rclcpp
+  ${Eigen3_LIBRARIES}
 )
 
 target_include_directories(rmf_robot_sim_utils
   PUBLIC
+    ${rclcpp_INCLUDE_DIRS}
     ${EIGEN3_INCLUDE_DIRS}
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
@@ -53,7 +54,7 @@ target_include_directories(rmf_robot_sim_utils
 
 add_library(ingestor_common SHARED ${PROJECT_SOURCE_DIR}/src/ingestor_common.cpp)
 
-ament_target_dependencies(ingestor_common 
+ament_target_dependencies(ingestor_common
     rmf_fleet_msgs
     rmf_building_map_msgs
     rmf_ingestor_msgs
@@ -62,7 +63,7 @@ ament_target_dependencies(ingestor_common
     Eigen3
 )
 
-target_include_directories(ingestor_common 
+target_include_directories(ingestor_common
   PUBLIC
     ${EIGEN3_INCLUDE_DIRS}
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -84,7 +85,7 @@ ament_target_dependencies(dispenser_common
     Eigen3
 )
 
-target_include_directories(dispenser_common 
+target_include_directories(dispenser_common
   PUBLIC
     ${EIGEN3_INCLUDE_DIRS}
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -185,6 +186,7 @@ install(
 install(
   TARGETS rmf_robot_sim_utils
   EXPORT rmf_robot_sim_utils
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
 )
