--- a/rmf_building_sim_gz_plugins/CMakeLists.txt
+++ b/rmf_building_sim_gz_plugins/CMakeLists.txt
@@ -21,25 +21,25 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 
-find_package(ignition-cmake2 REQUIRED)
+find_package(gz-cmake3 REQUIRED)
 
-ign_find_package(ignition-gazebo6 REQUIRED)
-set(IGN_GAZEBO_VER 6)
-ign_find_package(ignition-plugin1 REQUIRED COMPONENTS register)
-set(IGN_PLUGIN_VER 1)
-ign_find_package(ignition-common4 REQUIRED)
-set(IGN_COMMON_VER 4)
-ign_find_package(ignition-math6 REQUIRED)
-set(IGN_MATH_VER 6)
-ign_find_package(ignition-gui6 REQUIRED)
-set(IGN_GUI_VER 6)
-ign_find_package(ignition-msgs8 REQUIRED)
-set(IGN_MSGS_VER 8)
-ign_find_package(ignition-transport11 REQUIRED)
-set(IGN_TRANSPORT_VER 11)
-ign_find_package(ignition-rendering6 REQUIRED)
-set(IGN_RENDERING_VER 6)
-ign_find_package(sdformat12 REQUIRED)
+gz_find_package(gz-sim7 REQUIRED)
+set(GZ_SIM_VER 7)
+gz_find_package(gz-plugin2 REQUIRED COMPONENTS register)
+set(GZ_PLUGIN_VER 2)
+gz_find_package(gz-common5 REQUIRED)
+set(GZ_COMMON_VER 5)
+gz_find_package(gz-math7 REQUIRED)
+set(GZ_MATH_VER 7)
+gz_find_package(gz-gui7 REQUIRED)
+set(GZ_GUI_VER 7)
+gz_find_package(gz-msgs9 REQUIRED)
+set(GZ_MSGS_VER 9)
+gz_find_package(gz-transport12 REQUIRED)
+set(GZ_TRANSPORT_VER 12)
+gz_find_package(gz-rendering7 REQUIRED)
+set(GZ_RENDERING_VER 7)
+gz_find_package(sdformat13 REQUIRED)
 
 
 find_package(rmf_building_sim_common REQUIRED)
@@ -71,8 +71,8 @@ target_include_directories(door
 ament_target_dependencies(door
   PUBLIC
     rclcpp
-    ignition-gazebo${IGN_GAZEBO_VER}
-    ignition-plugin${IGN_PLUGIN_VER}
+    gz-sim${GZ_SIM_VER}
+    gz-plugin${GZ_PLUGIN_VER}
     rmf_building_sim_common
 )
 
@@ -91,8 +91,8 @@ target_include_directories(lift
 ament_target_dependencies(lift
   PUBLIC
     rclcpp
-    ignition-gazebo${IGN_GAZEBO_VER}
-    ignition-plugin${IGN_PLUGIN_VER}
+    gz-sim${GZ_SIM_VER}
+    gz-plugin${GZ_PLUGIN_VER}
     rmf_building_sim_common
 )
 
@@ -110,12 +110,12 @@ target_include_directories(crowd_simulator
   ${rmf_building_sim_common_INCLUDE_DIRS}
   ${rclcpp_INCLUDE_DIRS}
   ${menge_vendor_INCLUDE_DIRS}
-  ${IGNITION-COMMON_INCLUDE_DIRS}
+  ${gz-COMMON_INCLUDE_DIRS}
 )
 
 ament_target_dependencies(crowd_simulator
-  ignition-gazebo${IGN_GAZEBO_VER}
-  ignition-plugin${IGN_PLUGIN_VER}
+  gz-sim${GZ_SIM_VER}
+  gz-plugin${GZ_PLUGIN_VER}
   rclcpp
   rmf_building_sim_common
   menge_vendor
@@ -133,9 +133,9 @@ add_library(toggle_charging SHARED ${headers_MOC}
 )
 
 ament_target_dependencies(toggle_charging
-  ignition-gui${IGN_GUI_VER}
-  ignition-msgs${IGN_MSGS_VER}
-  ignition-transport${IGN_TRANSPORT_VER}
+  gz-gui${GZ_GUI_VER}
+  gz-msgs${GZ_MSGS_VER}
+  gz-transport${GZ_TRANSPORT_VER}
   Qt5Core
   Qt5Qml
   Qt5Quick
@@ -161,12 +161,12 @@ add_library(toggle_floors SHARED ${headers_MOC}
 )
 
 ament_target_dependencies(toggle_floors
-  ignition-gazebo${IGN_GAZEBO_VER}
-  ignition-gui${IGN_GUI_VER}
-  ignition-msgs${IGN_MSGS_VER}
-  ignition-plugin${IGN_PLUGIN_VER}
-  ignition-rendering${IGN_RENDERING_VER}
-  ignition-transport${IGN_TRANSPORT_VER}
+  gz-sim${GZ_SIM_VER}
+  gz-gui${GZ_GUI_VER}
+  gz-msgs${GZ_MSGS_VER}
+  gz-plugin${GZ_PLUGIN_VER}
+  gz-rendering${GZ_RENDERING_VER}
+  gz-transport${GZ_TRANSPORT_VER}
   Qt5Core
   Qt5Qml
   Qt5Quick
