--- a/.github/workflows/tsan.yaml
+++ b/.github/workflows/tsan.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: deps
         uses: ros-tooling/setup-ros@v0.4
         with:
-          required-ros-distributions: humble
+          required-ros-distributions: iron
       - name: install_clang
         run: sudo apt update && sudo apt install -y clang clang-tools lld
       - name: tsan_build_test
@@ -24,7 +24,7 @@ jobs:
           CC: clang
           CXX: clang++
         with:
-          target-ros2-distro: humble
+          target-ros2-distro: iron
           # build all packages listed in the meta package
           package-name: |
             rmf_building_sim_common
