Backport of joint position reset fix to iron (#106)
* Use JointPositionReset for open loop door control (#98)

Signed-off-by: Luca Della Vedova <luca@openrobotics.org>

* Update workflows to use iron

Signed-off-by: Luca Della Vedova <lucadv@intrinsic.ai>

* Bump action-ros-ci to v0.3

Signed-off-by: Yadunund <yadunund@openrobotics.org>

* Update container in tsan

Signed-off-by: Yadunund <yadunund@openrobotics.org>

* Switch to setup-ros v0.6

Signed-off-by: Yadunund <yadunund@openrobotics.org>

---------

Signed-off-by: Luca Della Vedova <luca@openrobotics.org>
Signed-off-by: Luca Della Vedova <lucadv@intrinsic.ai>
Signed-off-by: Yadunund <yadunund@openrobotics.org>
Co-authored-by: Yadunund <yadunund@openrobotics.org>

--- a/.github/workflows/tsan.yaml
+++ b/.github/workflows/tsan.yaml
@@ -8,23 +8,24 @@ jobs:
   tsan:
     name: tsan
     runs-on: ubuntu-latest
-    container:
-      image: rostooling/setup-ros-docker:ubuntu-jammy-latest
+    strategy:
+      matrix:
+        docker_image: ['ros:iron-ros-base']
     steps:
       - name: deps
-        uses: ros-tooling/setup-ros@v0.4
+        uses: ros-tooling/setup-ros@v0.6
         with:
-          required-ros-distributions: humble
+          required-ros-distributions: iron
       - name: install_clang
         run: sudo apt update && sudo apt install -y clang clang-tools lld
       - name: tsan_build_test
-        uses: ros-tooling/action-ros-ci@v0.2
+        uses: ros-tooling/action-ros-ci@v0.3
         id: tsan_build_test
         env:
           CC: clang
           CXX: clang++
         with:
-          target-ros2-distro: humble
+          target-ros2-distro: iron
           # build all packages listed in the meta package
           package-name: |
             rmf_building_sim_common
