Port rmf_robot_sim
Signed-off-by: Arjo Chakravarty <arjoc@google.com>

--- a/rmf_robot_sim_gz_plugins/CMakeLists.txt
+++ b/rmf_robot_sim_gz_plugins/CMakeLists.txt
@@ -22,25 +22,25 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 
-find_package(ignition-cmake2 REQUIRED)
+find_package(gz-cmake3 REQUIRED)
 
-ign_find_package(ignition-gazebo6 REQUIRED)
-set(IGN_GAZEBO_VER 6)
-ign_find_package(ignition-plugin1 REQUIRED COMPONENTS register)
-set(IGN_PLUGIN_VER 1)
-ign_find_package(ignition-common4 REQUIRED)
-set(IGN_COMMON_VER 4)
-ign_find_package(ignition-math6 REQUIRED)
-set(IGN_MATH_VER 6)
-ign_find_package(ignition-gui6 REQUIRED)
-set(IGN_GUI_VER 6)
-ign_find_package(ignition-msgs8 REQUIRED)
-set(IGN_MSGS_VER 8)
-ign_find_package(ignition-transport11 REQUIRED)
-set(IGN_TRANSPORT_VER 11)
-ign_find_package(ignition-rendering6 REQUIRED)
-set(IGN_RENDERING_VER 6)
-ign_find_package(sdformat12 REQUIRED)
+gz_find_package(gz-sim8 REQUIRED)
+set(GZ_SIM_VER 8)
+gz_find_package(gz-plugin2 REQUIRED COMPONENTS register)
+set(GZ_PLUGIN_VER 2)
+gz_find_package(gz-common5 REQUIRED)
+set(GZ_COMMON_VER 5)
+gz_find_package(gz-math7 REQUIRED)
+set(GZ_MATH_VER 7)
+gz_find_package(gz-gui8 REQUIRED)
+set(GZ_GUI_VER 8)
+gz_find_package(gz-msgs10 REQUIRED)
+set(GZ_MSGS_VER 10)
+gz_find_package(gz-transport13 REQUIRED)
+set(GZ_TRANSPORT_VER 13)
+gz_find_package(gz-rendering8 REQUIRED)
+set(GZ_RENDERING_VER 8)
+gz_find_package(sdformat14 REQUIRED)
 
 find_package(Eigen3 REQUIRED)
 find_package(rmf_fleet_msgs REQUIRED)
@@ -63,10 +63,10 @@ include(GNUInstallDirs)
 add_library(teleport_ingestor SHARED src/TeleportIngestor.cpp)
 
 ament_target_dependencies(teleport_ingestor
-    ignition-gazebo${IGN_GAZEBO_VER}
-    ignition-plugin${IGN_PLUGIN_VER}
-    ignition-msgs${IGN_MSGS_VER}
-    ignition-transport${IGN_TRANSPORT_VER}
+    gz-sim${GZ_SIM_VER}
+    gz-plugin${GZ_PLUGIN_VER}
+    gz-msgs${GZ_MSGS_VER}
+    gz-transport${GZ_TRANSPORT_VER}
     rmf_fleet_msgs
     rclcpp
     rmf_robot_sim_common
@@ -87,10 +87,10 @@ target_include_directories(teleport_ingestor
 add_library(teleport_dispenser SHARED src/TeleportDispenser.cpp)
 
 ament_target_dependencies(teleport_dispenser
-    ignition-gazebo${IGN_GAZEBO_VER}
-    ignition-plugin${IGN_PLUGIN_VER}
-    ignition-msgs${IGN_MSGS_VER}
-    ignition-transport${IGN_TRANSPORT_VER}
+    gz-sim${GZ_SIM_VER}
+    gz-plugin${GZ_PLUGIN_VER}
+    gz-msgs${GZ_MSGS_VER}
+    gz-transport${GZ_TRANSPORT_VER}
     rmf_fleet_msgs
     rclcpp
     rmf_robot_sim_common
@@ -114,8 +114,8 @@ ament_target_dependencies(readonly
     rmf_fleet_msgs
     rmf_building_map_msgs
     rclcpp
-    ignition-gazebo${IGN_GAZEBO_VER}
-    ignition-plugin${IGN_PLUGIN_VER}
+    gz-sim${GZ_SIM_VER}
+    gz-plugin${GZ_PLUGIN_VER}
     rmf_robot_sim_common
     Eigen3
 )
@@ -135,8 +135,8 @@ add_library(slotcar SHARED ${PROJECT_SOURCE_DIR}/src/slotcar.cpp)
 
 ament_target_dependencies(slotcar
   PUBLIC
-    ignition-gazebo${IGN_GAZEBO_VER}
-    ignition-plugin${IGN_PLUGIN_VER}
+    gz-sim${GZ_SIM_VER}
+    gz-plugin${GZ_PLUGIN_VER}
     rmf_robot_sim_common
     rmf_fleet_msgs
     rclcpp
@@ -163,11 +163,11 @@ add_library(LightTuning SHARED ${headers_MOC}
 )
 
 ament_target_dependencies(LightTuning
-  ignition-gui${IGN_GUI_VER}
-  ignition-gazebo${IGN_GAZEBO_VER}
-  ignition-msgs${IGN_MSGS_VER}
-  ignition-transport${IGN_TRANSPORT_VER}
-  ignition-rendering${IGN_RENDERING_VER}
+  gz-gui${GZ_GUI_VER}
+  gz-sim${GZ_SIM_VER}
+  gz-msgs${GZ_MSGS_VER}
+  gz-transport${GZ_TRANSPORT_VER}
+  gz-rendering${GZ_RENDERING_VER}
   Qt5Core
   Qt5Qml
   Qt5Quick
